# ai-research-mentor

./: .env.example  .example.env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Eval Plans - 2nd Draft.txt  README.md  TODO.md  analyze_student_judges.py  baseline_prompt.md  changes_summary.md  example.jsonl  prompt.md  pyproject.toml  scratchpad.md  slack-plan.md  unified_guidelines.json  ws6_reliability_summary.md
.cursor/plans/: eval-aee3d0e0.plan.md
.factory/droids/: documentation-version-validator.md
docs/: eval-brief.md  eval-commands-list.md  pdf-parsing-improvements.md
docs/architecture/: ADR-001-directory-structure.md  ADR-003-orchestrator-and-agent-integration.md  ADR-004-event-model-and-streaming.md  tools-migration-checklist.md
docs/tech-report/: outline.md
evals-for-papers/scripts/: run_stage_a.sh  run_stage_a_judges.sh  run_stage_a_pairwise.sh  run_stage_b.sh  run_stage_b_judges.sh  run_stage_b_pairwise.sh  run_stage_c.sh  run_stage_c_judges.sh  run_stage_c_pairwise.sh  run_stage_d.sh  run_stage_d_judges.sh  run_stage_d_pairwise.sh  run_stage_e.sh  run_stage_e_judges.sh  run_stage_e_pairwise.sh  run_stage_f.sh  run_stage_f_judges.sh  run_stage_f_pairwise.sh
evaluation/: MENTOR_EVAL_PLAN.md  README.md  scripts
evaluation-results/scripts/: matrix.yaml
evaluation/annotation/: rubrics.md
evaluation/config/: citation_domains.yaml  metrics.yaml
evaluation/data/: evals_single_turn.jsonl
evaluation/judges/: aspect_rubrics.yaml  core_metrics_rubrics.yaml  single_turn_absolute_prompt.md  (+1 more)
icml-evaluation-results/: METIS human eval results.csv  README.md  compute_cost_latency.py  cost_latency_results.json  summary.csv
reports/: icml_eval_gaps.md
scripts/: eval_baseline.py  judge_multi_turn_pairwise.py  line_count_guard.py  run_judges_ensemble.sh  visualize_eval_results.py
tests/: test_agent_stream_tool_calls.py  test_attachments_integration.py  test_attachments_summary_lazy.py  test_citation_integrity_tool.py  test_e2e_citations_policy.py  test_fallback_policy_backoff.py  test_guidelines_recommendation.py  test_o3_fallback_reliability.py  test_react_toolset_validation.py  test_recommendation.py  test_recommender_degraded_scoring.py  test_tools_registry_scaffold.py
web/: package-lock.json  package.json  tailwind.config.ts
(+4529 files in other folders)
