[project]
name = "academic-research-mentor"
version = "0.2.0"
description = "AI-powered mentor for academic research - now with direct OpenAI SDK"
readme = "README.md"
authors = [
    { name = "MajorTimberWolf", email = "ak0929@srmist.edu.in" }
]
requires-python = ">=3.11"
keywords = ["ai", "research", "mentor", "cli", "openai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    # Core LLM - using OpenAI SDK directly (works with OpenRouter)
    "openai>=1.40.0",
    "httpx>=0.27.0",
    
    # Web framework
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    
    # Document processing
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    
    # Memory/Context
    "supermemory>=3.4.0",
    
    # CLI/UI
    "rich>=14.1.0",
    "python-dotenv>=1.0.0",
    
    # Search (optional but useful)
    "ddgs>=9.5.5",
    "beautifulsoup4>=4.12.0",
    "tavily-python>=0.3.3",
]

[project.scripts]
# New simplified CLI
arm = "academic_research_mentor.cli_simple:main"
# Legacy CLI (may have broken imports until fully migrated)
academic-research-mentor = "academic_research_mentor.cli:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project.optional-dependencies]
tui = [
    "textual>=6.2.1",
]
# Legacy LangChain support (for gradual migration)
langchain = [
    "langchain>=0.2",
    "langchain-openai>=0.1.22",
    "langgraph>=0.6.5",
]

[project.urls]
Homepage = "https://github.com/lossfunk/ai-research-mentor"
Repository = "https://github.com/lossfunk/ai-research-mentor"
Issues = "https://github.com/lossfunk/ai-research-mentor/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
]

[tool.uv.workspace]
members = [
    "manim-animation",
]
